added paper contents

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,5 +1,5 @@
 
-\chapter{Expanding the atlas of variant effects in human disease genes}
+\chapter[Expanding the atlas of human disease variants]{Expanding the atlas of variant effects in human disease genes}
 
 \section{Introduction}
 
@@ -7,19 +7,63 @@
 
 \subsection{Functional maps of SUMO1 and its cognate E2 enable biophysical insights}
 
+Based on the DMS map of UBE2I (Figure 2A) several biochemical observations could be made. Consistent with observations made in smaller-scale biochemical studies of the SUMO E2 conjugase14,15, the areas most sensitive to mutation are those proximal to the active site (particularly residues 81-88, 90, 92-96, and 127-130), and the N-terminal alpha helix which mediates four protein interactions including the critical interaction with the E1 SUMO-activating complex. Another interesting feature of the map is the alternating tendency towards damaging and benign substitutions across positions 55-65. A comparison with solvent accessibility reveals this to be caused by alternating externally and internally-oriented residues, with the latter positions constrained to be hydrophobic. This alternating tendency is also reflected in evolutionary conservation across these positions.
+
+When comparing individual protein interaction interfaces, the most substantial fitness defects are observed in the interfaces for the E1 activating complex binding interface and the  covalent and noncovalent SUMO binding interfaces  (Supplementary Figure S5).  The importance of residues at the interfaces mediating covalent and noncovalent interaction SUMO is made apparent by ‘painting’ the surface of the UBE2I structure with the median fitness score at each residue position (Figure 2B). 
+
+Intriguingly, many sites show fitness that is better than wildtype (e.g., positions 74, 76, 88, 89, 91 and 98). Manual functional complementation spotting assays confirmed that complementation with these mutants allows greater growth than does the wild type human protein, but resemble more closely the growth at the permissive temperature for the ubc-ts strain (Supplementary Figure S6). One might be tempted to interpret these cases as reversions to residues present in the yeast protein. However, a comparison of fitness score distributions between changes to S. cerevisiae  residues and those occurring in D. discoideum or D. melanogaster showed no significant difference (Supplementary Figure S7). Recognizing that in this assay, human UBE2I must function with the yeast versions of other sumoylation pathway members, it stands to reason that some substitutions could be adaptive by improving compatibility with yeast interaction partners. A comparison with co-crystal structure data16 shows that many of the apparently-adaptive residues are located on the surface facing the general direction of the substrate, with some being in direct contact with the substrate’s sumoylation motif (Figure 2C). This suggests a possible adaptation via improved recognition of substrates for which sumoylation is most important for yeast growth. Indeed, in vitro sumoylation assays performed previously for a small number of UBE2I mutants revealed increased sumoylation for some substrates15. Comparing our map with these sumoylation assay results, we confirmed that above-WT complementation levels were enriched for cases of substrate specificity shift (Supplementary Figure S8).
+
+Interestingly, residues A15 and T108 appear adaptive but do not face towards the substrate, instead forming part of the interface with the E3 SUMO ligase RanBP2, and flank a small cavity on UBE2I’s surface into which RanBP2 inserts a phenylalanine residue upon binding. Changing either A15 or T108 into aromatic residues results in a large fitness increase, which may result from gain of a π-stack interaction that strengthens E2-E3 binding (Supplementary Figure S9).
+
+Reasoning that mutations that allow a protein to work better with its yeast partners would generally work less well with its human partners, we wished to test the hypothesis that substitutions exhibiting greater-than-wild-type complementation in yeast tended to be deleterious in humans. We also wished to test more generally whether site-specific models of sequence evolution derived from the UBE2I data are consistent with standard site-specific evolution models that do not use experimental functional assays, as has been shown previously for other DMS data17,18. To investigate both of these questions, we assessed three alternative versions of the UBE2I data, and for each we assessed the extent to which each resulting dataset agreed with standard site-specific evolution models.  The three versions were: a) untransformed;  b) transformed such that adaptive values to be wildtype (i.e.,  replace scores > 1 with 1); and c) transformed such that adaptive values are deleterious (by inverting scores > 1 such that score X is replaced by 1/X ).  For each version, because imputed and regularized data makes use of conservation data, we avoided circularity by considering only unregularized scores.  We evaluated the likelihood of alignments under: a standard site-specific model that is not informed by DMS19, site-specific models derived from each of three transformed UBE2I DMS datasets, and a site-specific model derived from DMS data that had been randomized between sites (see Methods for details).  Each of the three transformed versions of UBE2I DMS data yielded models that fit aligned homologs better than were obtained using either the standard model or the randomized-sites DMS model.  Of the three models derived from the three transformed DMS versions, model (c) yielded the best-fit according to the Akaike Information Criterion for model selection (see Supplementary Text).  Taken together, our results suggest missense mutations in UBE2I that lead to improved function in yeast are likely to reduce function in humans.
+
+
 \subsubsection{Functional maps recapitulate known biology}
 
 \subsubsection{Substrate specificity shifts and E2 hyperactivity}
 
 \subsubsection{Intragenic epistasis and compensatory mutations}
 
+Full-length UBE2I clones generated for DMS-BarSEQ analysis often encoded more than one amino acid change. Multi-mutant clones offer the opportunity to search for intragenic genetic interactions. Genetic interaction is defined when a combination of mutations yields an unexpected phenotypic effect, so that identifying genetic interactions requires that we model the phenotype expected from a combination of mutations, given the single-mutant effects.  Here we used a previously-described multiplicative model20,21 in which genetic interaction is measured as ij=fifj-fij, where fi and fj represent single mutant fitness and fij represents double mutant fitness scores. Most double mutants (71\%) did not show a significant deviation from ij= 0 under this model, while 328 position pairs did show significant genetic interaction (Figure 3A, see Methods). Of particular interest are compensatory interactions, i.e. cases where a double mutation is more fit than either of the component single mutations.  Where compensatory residues are proximal in the protein structure, the combination of two mutant residues may be able to re-establish a physical interaction that was lost in each of the single mutants. Although the majority of genetically interacting sites were not proximal in the structure (Figure 4B), there were interesting exceptions. For example, the I4T-P69S double mutant appears to exhibit compensatory behaviour: In the wild type structure, the van-der-Waals radii of the two residues are in direct contact (Figure 4C). Either mutation alone would be expected to destabilize the hydrophobic interaction between isoleucine and proline.  However, In the double mutant, hydroxyl groups on the two residues could adopt a hydrogen bond that re-establishes interaction and re-stabilizes the fold. 
+
+
 \subsection{Functional maps of three human disease genes}
+
+Having established and evaluated the framework, we aimed to create maps for a diverse set of genes that have been associated with disease with varying degrees of confidence. Based on the availability of robust complementation assays, we applied DMS-TileSeq to the following protein targets: SUMO1, for which heterozygous null mutations are associated with cleft palate; Thiamine Pyrophosphokinase 1 (TPK1), associated with thiamine pyrophosphokinase deficiency; Neuronal Calcium Sensor 1 (NCS1), which has been implicated in autism based on a single de novo mutation;  and CALM1, CALM2 and CALM3 associated with heart conditions long-QT syndrome and catecholaminergic polymorphic ventricular tachycardia. Although the three calmodulin genes differ in nucleotide sequence, each encodes the same polypeptide sequence. Thus, we performed a deep mutational scan only for CALM1, which enabled us to also map missense variant effects in CALM2 and CALM3. In each case, we used the TileSEQ approach coupled with complementation to generate a map of missense variant functions. 
+
+The most immediately apparent feature of the SUMO1 map was the strong enrichment for neutral substitutions within the first 20 amino acid positions (Figure 4), which is consistent both with the low level of evolutionary conservation for this region and its annotation as a disordered region. The last four amino acid positions appeared similarly insensitive to mutation, consistent with the cleavage of this region by SENP proteases during SUMO maturation. By contrast, other residue positions were strongly sensitive to mutation, including many inward-facing residues that are apparently constrained to be hydrophobic. As expected, the C-terminal diglycine, which is required for covalent binding of SUMO to the E1, E2 and to the sumoylation target protein is also very sensitive to mutation. Other strongly constrained residues are core members of interaction interfaces. These include the central phenylalanine 36 in the SUMO recognition motif (SRM) interface; glycine 68, which forms the apex of a tight turn within the interface with de-sumoylation enzymes, as well as the E1 and E2 proteins; and leucine 80, which is part of the interface with non-covalently bound E2. 
+
+The proximity and orientation of aspartate \#73 and lysine \#48 suggests that they are able to form a salt bridge with one another.  The importance of each residue according to the DMS map supports a model in which this salt bridge is important for SUMO folding and/or stability. Interestingly, substituting aspartate for methionine \#59, which points towards lysine \#48 from an angle similar to that of aspartate \#73, enhances the complementation fitness of SUMO1 beyond wild type levels.  This further underlines the potential importance of a polar interaction involving lysine \#48 (Supplementary Figure S10).
+
+As was shown above for UBE2I, phylogenetic analysis of SUMO1 similarly showed that ‘adaptive’ mutations with ability to complement yeast better than wild-type are likely deleterious in humans ([Supp text]. We therefore transformed fitness scores so that such adaptive mutations are considered to be deleterious (see Methods).  However, because adaptive substitutions may provide interesting clues about differences between yeast and human cellular contexts, we provide both transformed (Figure 5) and untransformed (Supplementary Figure S11) versions of each map.
+
+Thiamine pyrophosphokinase (TPK1) is a protein that forms a dimer to perform its biochemical function. Its substrate, thiamine diphosphate, is bound within two active sites formed by the dimerization interface22. That is, each monomer contributes half of the residues making up each of the two active sites.  Each monomer in turn is made up of an N-terminal globular domain and a C-terminal β-sandwich domain. The residues most sensitive to mutation in the protein make up the hydrophobic cores of the two domains: L21, V22, W36, G48, Y53, P65, G70, Y83, L108, I122, T124, and G127 for the N-terminal domain; and L161, G168, G199, L200, V227, V229, L236, and W237 for the C-terminal domain. As might have been expected, mutation-sensitive residues include those closely involved in forming the active sites: D46, G70, D71, D73, D100, and K103 in the N-terminal half of the active site, contacting the diphosphate portion of the substrate. In the C-terminal half of the active site, K203, L209, G212, L214, S216, T217, and N219 show similar sensitivity. Interestingly, the tryptophan residue at position 202 appears to be insensitive to mutation despite its close and extensive contact with the thiamine ligand. By contrast, a neighbouring lysine at position 201 is surprisingly sensitive suggesting potential importance in coordinating the ligand.  The remainder of the dimerization interface also features a number of sensitive residues, such as M136, G184, V188, G189 and G211. Finally, residues 1-12, which form a beta-strand anchoring the N-terminal domain back to the C-terminal domain were also found to be sensitive.
+
+Calmodulin (CALM1/2/3) and the Neuronal Calcium Sensor protein (NCS1) are homologs (E-value 4x10-5 when searched against the human proteome23,24) with 24\% sequence identity and 48.5\% similarity25. However, they display different impact patterns despite their similar domain structure and similar molecular roles as calcium sensing proteins. Both are comprised of four Calcium-binding EF-hands, with NCS1 containing additional sequences upstream and downstream of the four hands. A comparison of previously published NMR structures reveals that the overall folds of the two proteins differ substantially26,27. Calmodulin features a long central helix that separates two globular domains, called the N-lobe and the C-lobe, each comprised of two EF hands. A hydrophobic pocket serving as a binding interface for interacting proteins is nested within the C-terminal domain. NCS1, by contrast, forms a single shell-like shape, centered around a large hydrophobic crevice. This crevice acts as a binding interface for interacting proteins. Thus, the divergent DMS profiles we observed for CALM1,2,3 and NCS1 are consistent with these substantial structural differences.
+
+The Neuronal Calcium Sensor NCS1 displays the greatest sensitivity to mutation within the N-terminal region containing the myristoylation site.  This myristoylation site is essential for anchoring NCS1 into the plasma membrane. One other residue that stands out is the tryptophan at position 30, which results in complete loss of function when replaced with any other amino acid. Like most other sensitive residues W30 is found among those contributing to the hydrophobic crevice acting as an interaction interface. Other cases include F55, F56, A104, M121, I152, and A182. An interesting observation can be made with respect to the two helices that separate the two N-terminal EF hands from the two C-terminal EF hands. A kink between the two helices brings them into an angle that allows a the globular shape of the overall protein to form. Without this kink it is conceivable that NCS1’s fold would much more resemble that of Calmodulin. A glycine residue (G95) is likely responsible for forming that kink due to its helix breaking properties. This residue is also found to be quite sensitive to mutation.
+
+Within Calmodulin, the regions most sensitive to mutation are: 1) the hydrophobic cores of the two globular domains; 2) interfacial residues for CALM1,2,3 protein interactions, and 3) a subset of the negatively charged residues in EF hands that contact Ca++ ions. Within the hydrophobic cores of the two lobes, five mutually interacting phenylalanine residues at positions 17, 69, 90, 93, and 142 stand out in particular, as all of them are found in the top 9 most sensitive residues on the map. Within the interaction interface, the residues D85, A89, F93, M100, L106, V109, L113, G114, L117, M125, V137, F142, M145, M146 are the most strongly sensitive to mutation. Regarding the four Calcium-binding EF-hand loops, we found it interesting that only a subset of the negatively-charged residues contacting Ca++ are even moderately sensitive. Within EF1, only D25 appears to be important, in EF2 only N61, in EF3 only D94 and D96, and in EF4 only D130 and D134. Overall, the EF3/4 in the C-lobe also appear to be more important than their N-lobe counterparts. This is in agreement with previous observations made by Aravind et al.28, who described EF4 as the primary sensory site. A number of unexplained sensitivities exist as well: Arginine 91 and Asparagine 54 show strong phenotypes despite extending from seemingly unused surfaces of the protein, offering the possibility that these residues are functionally relevant sites of interaction or modification.
+
 
 \subsubsection{A thiamine pyrophosphokinase map reflects a recessive phenotype}
 
 \subsubsection{A functional map of neuronal calcium sensor-1}
 
 \subsubsection{A calmodulin map excels in classifying disease variants}
+
+\subsubsection{Functional maps recapitulate known disease cases}
+
+To validate the utility of our maps in the context of human disease, we extracted known disease-associated variants from Clinvar29, as well as rare and common polymorphisms observed independent of disease from GnomAD30, and somatic variants previously observed in tumors from COSMIC31. 
+
+For TPK1, a large number of very rare variants (minor allele frequency or MAF < 10-6) is known from GnomAD. At first look, it appears the majority of these variants are shown to be deleterious (Supplementary Figure S12). This seems unlikely, given that Thiamine Metabolism Dysfunction Syndrome, reported to be caused by mutations in this gene, is a very severe disease to which patients succumb in childhood32., and that GnomAD attempts to filter out subjects with severe pediatric disease. However, the disease is also known to follow a recessive inheritance pattern, with only homozygous or compound heterozygous individuals being affected. We thus used phased sequence data from the 1000 Genomes Project1 to determine the diploid genotypes in the TPK1 locus for all listed individuals and based our phenotype predictions based on the maximum fitness score of either allele. This improved prediction performance markedly, leading to complete separation between disease and non-disease genotypes. Both PROVEAN and PolyPhen-2 were also able to perfectly separate the two groups (Figure 6B), so that additional compound heterozygotes with known disease status will be required to determine whether this DMS map is more useful than computational methods for classifying pathogenic TPK1 variants. 
+
+While NCS1 does not have any entries in ClinVar, a previous publication identified the variant R102Q as a de novo variant in a single patient with autism spectrum disorder33. While the variant did not affect overall protein folding and localization, the authors did observe that the dynamics of cytosol-membrane cycling were altered. Our complementation map did not show any functional impact for this variant.
+
+As for NCS1, no disease-associated missense alleles are known for UBE2I and SUMO1 in ClinVar. However, a number of somatic mutations for all three genes have been observed in cancer according to COSMIC. While these can be expected to passenger mutations, one may still hypothesize that somatic variants are likely not subject to the same selection pressures as germline variants, as interference with developmental processes is not necessarily detrimental to a tumour. We thus tested whether germline polymorphisms in these three genes were enriched for being functional compared to their somatic counterparts in our maps. Indeed, we observed a significant difference between the two sets (Wilcoxon P=2.6x10-5) (Figure 6C).
+
+Finally, we examined our functional map of Calmodulin and found that it was able to distinguish disease variants from non-disease variants very well (Figure 6A). In contrast to TPK1, the Calmodulin map did not need to be corrected for diploid genotypes, as previously reported disease variants have been described as following a dominant inheritance pattern34. A precision-recall (PRC) plot reveals a superior performance (AUC=0.74) compared to PROVEAN (AUC=0.47) and PolyPhen-2 (AUC=0.47).  To further put our map to the test in a clinical scenario we inquired with Invitae, a company offering gene panel sequencing services for Long QT syndrome, including CALM1/2/3. In a blind test, we requested a list of Calmodulin variants they observed in patients but were unable to classify. After calibrating our map with respect to the above ClinVar and GnomAD datasets, we classified these 10 new variants (Supplementary Table S2). Two were classified as damaging, six as benign, and two were too close to the threshold to be called either. In the next phase, Invitae revealed the associated patient cardiovascular phenotypes. Five out of the six patients with benign predictions were revealed to be healthy, while both patients with damaging predictions did show a positive phenotype. The two uncertain cases were revealed to be affected as well. A Mann-Whitney-U test showed these results to be statistically significant (P=0.008).
+
 
 \section{Methods}
 
